# openenv-medical-record-abstraction

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
data/: __init__.py  drug_interactions.py  medical_ontology.py  synthetic_notes.py
examples/: expected_output.json  sample_note.txt
server/: __init__.py  app.py  environment.py  graders.py  requirements.txt  reward.py  tasks.py
tests/: __init__.py  test_env.py  test_graders.py
